--- a/dev/pug/section/index/hero.pug
+++ b/dev/pug/section/index/hero.pug
@@ -1,6 +1,7 @@
-section.index-hero.hero-background
+section.index-hero
   .index-hero__video
-    video(src="app/img/content/videoplayback.mp4" muted autoplay loop)
+    video.desktop(src="app/img/content/videoplayback.mp4" muted autoplay loop)
+    video.mobile(src="app/img/content/videoplayback-mobile.mp4" muted autoplay loop)
   .container
     .index-hero__wrap
       h1.page-title.page-title--white.index-hero__title Студия KazanExpress — выходи на новый уровень
