--- a/dev/pug/section/index/advantages.pug
+++ b/dev/pug/section/index/advantages.pug
@@ -4,10 +4,18 @@ section.index-advantages
       h2.title-h3.index-advantages__title К услугам  наших продавцов:
       .index-advantages__row
         ul.index-advantages__info
-          li.index-advantages__info-item Семь рабочих зон для проведения съемок любой сложности
-          li.index-advantages__info-item Широкий ассортимент аксессуаров и нарядов
-          li.index-advantages__info-item Одно из лучших профессиональных оборудований в стране
-          li.index-advantages__info-item Технология съемки товара 360 градусов 
+          li.index-advantages__info-item 
+            p Семь рабочих зон для проведения съемок любой сложности
+            img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 5")
+          li.index-advantages__info-item 
+            p Широкий ассортимент аксессуаров и нарядов
+            img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 6")
+          li.index-advantages__info-item 
+            p Одно из лучших профессиональных оборудований в стране
+            img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 7")
+          li.index-advantages__info-item 
+            p Технология съемки товара 360 градусов 
+            img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 8")
         .index-advantages__images
           .index-advantages__images-row
             .index-advantages__image.big
