--- a/dev/pug/section/index/services.pug
+++ b/dev/pug/section/index/services.pug
@@ -9,11 +9,12 @@ section.index-services#services
           p.index-services__block-text Правильно оформленные товары увеличивают конверсию продаж и повышают количество лояльных клиентов.
           span.index-services__block-price 40 р. / SKU*
           p.index-services__block-subprice *цена за один SKU (разновидности одного товара по цвету или форме). Количество фото на 1 SKU отличаются в зависимости от необходимости раскрытия функционала и всех ракурсов товара.
+          p.index-services__block-accent До 01.08.2020 года в стоимость входят все услуги студии: работа модели, стилиста, визажиста, продюсера, реквизит, видеоролик (при необходимости).
           a.btn.btn--dark(href="#") заказать
         .index-services__block-views
           .index-services__block-image
             img(src="app/img/content/index-services-1.jpg" alt="Картинка услуги 1")
-          p.index-services__block-subimage До 01.05.2020 года в стоимость входят все услуги студии: работа модели, стилиста, визажиста, продюсера, реквизит, видеоролик (при необходимости).
+          p.index-services__block-subimage До 01.08.2020 года в стоимость входят все услуги студии: работа модели, стилиста, визажиста, продюсера, реквизит, видеоролик (при необходимости).
     .index-services__block.wow.fadeIn
       h3.title-h3.index-services__block-title Доставка товара
       p.index-services__block-subtitle Если ваши товары уже на складе KazanExpress - вы можете не задумываться о транспортировке. Мы оперативно сделаем отбор товаров со склада и отвезем их на студию, а также сделаем обратное размещение после съемок.
@@ -37,5 +38,5 @@ section.index-services#services
           .index-services__block-image
             img(src="app/img/content/index-services-3.jpg" alt="Картинка услуги 3")
     .index-services__more.wow.fadeIn
-      p.index-services__more-text Более подробно о процессе подачи заявки на предметную съёмку и экспедицию:
+      p.index-services__more-text Более подробно о процессе подачи заявки на предметную съёмку и доставку:
       a.index-services__more-link(href="#") Инструкция для продавцов KazanExpress
