--- a/dev/static/stylus/section/index/advantages.styl
+++ b/dev/static/stylus/section/index/advantages.styl
@@ -2,14 +2,20 @@
   background-color gray-6
   padding-top 150px
   padding-bottom 200px
+  @media (max-width breakpoint-md)
+    padding 100px 0
 
 .index-advantages__wrap
   max-width 1030px
   margin 0 auto 100px
+  @media (max-width breakpoint-md)
+    margin-bottom 0
 
 .index-advantages__title
   max-width 450px
   margin-bottom 75px
+  @media (max-width breakpoint-md)
+    margin-bottom 50px
 
 .index-advantages__row
   display flex
@@ -18,6 +24,11 @@
   max-width 400px
   margin-right 25px
   padding-top 10px
+  @media (max-width breakpoint-md)
+    padding-top 0
+    margin-right 0
+    width 100%
+    max-width 100%
 
 .index-advantages__info-item
   font-weight 500
@@ -44,6 +55,43 @@
     bottom 0
   &:not(:last-child):after
     display none
+  img
+    display none
+  @media (max-width breakpoint-md)
+    display block
+    height auto
+    font-weight normal
+    font-size 16px
+    line-height 125%
+    letter-spacing 0.8px
+    width 100%
+    &:before,
+    &:after
+      display none
+    &+&
+      margin-top 100px
+    &:first-child,
+    &:last-child
+      max-width 285px
+      margin-left auto
+    &:nth-child(2)
+      img,
+      p
+        margin-left auto
+        margin-right auto
+    &:nth-child(3)
+      p
+        margin-left auto
+        margin-right auto
+    p
+      margin-bottom 25px
+      max-width 250px
+    img
+      display block
+
+.index-advantages__images
+  @media (max-width breakpoint-md)
+    display none
 
 .index-advantages__images-row
   display flex
@@ -65,6 +113,8 @@
 
 .index-advantages__block
   display flex
+  @media (max-width breakpoint-md)
+    display none
 
 .index-advantages__block-image
   width 100%
@@ -73,6 +123,8 @@
   margin-right 50px
   border-radius 10px
   overflow hidden
+  @media (max-width breakpoint-lg)
+    max-width 400px
 
 .index-advantages__block-text
   font-weight 500
@@ -81,3 +133,5 @@
   letter-spacing 1.2px
   color gray-1
   max-width 430px
+  @media (max-width breakpoint-lg)
+    font-size 18px
