--- a/dev/static/stylus/section/index/hero.styl
+++ b/dev/static/stylus/section/index/hero.styl
@@ -1,7 +1,5 @@
 .index-hero
-  min-height auto
-  height auto
-  padding-top 0
+  margin-top -141px
   position relative
   .container
     position absolute
@@ -10,7 +8,9 @@
     bottom 0
     right 0
   @media (max-width breakpoint-lg)
-    padding-top 0
+    margin-top -121px
+  @media (max-width breakpoint-md)
+    margin-top 0
 
 .index-hero__video
   position relative
@@ -35,6 +35,18 @@
     left 0
     width 100%
     height 100%
+    &.mobile
+      display none
+  @media (max-width breakpoint-md)
+    padding-top 0
+    height calc(100vh - 50px)
+    min-height 500px
+    video
+      object-fit cover
+      &.desktop
+        display none
+      &.mobile
+        display block
 
 .index-hero__wrap
   height 100%
@@ -42,6 +54,10 @@
   flex-direction column
   justify-content flex-end
   padding-bottom 145px
+  @media (max-width breakpoint-lg)
+    padding-bottom 40px
+  @media (max-width breakpoint-md)
+    padding-bottom 20%
 
 .index-hero__title
   max-width 720px
