--- a/dev/static/stylus/section/become/form.styl
+++ b/dev/static/stylus/section/become/form.styl
@@ -1,3 +1,8 @@
+.become-form
+  @media (max-width breakpoint-md)
+    padding-top 100px
+    margin-top -50px
+
 .become-form__wrap
   max-width 900px
   margin-left auto
