--- a/dev/static/stylus/section/become/info.styl
+++ b/dev/static/stylus/section/become/info.styl
@@ -2,7 +2,7 @@
   padding-top 100px
   margin-bottom 200px
   @media (max-width breakpoint-md)
-    margin-bottom 50px
+    margin-bottom 0
 
 .become-info__title
   margin-bottom 50px
