--- a/dev/static/stylus/section/index/hero.styl
+++ b/dev/static/stylus/section/index/hero.styl
@@ -39,7 +39,7 @@
       display none
   @media (max-width breakpoint-md)
     padding-top 0
-    height calc(100vh - 50px)
+    height 100vh
     min-height 500px
     video
       object-fit cover
