--- a/dev/static/stylus/section/index/services.styl
+++ b/dev/static/stylus/section/index/services.styl
@@ -4,6 +4,7 @@
   @media (max-width breakpoint-md)
     padding-top 90px
     padding-bottom 100px
+    overflow hidden
 
 .index-services__title
   margin-bottom 100px
