--- a/dev/static/stylus/section/header.styl
+++ b/dev/static/stylus/section/header.styl
@@ -29,6 +29,8 @@
     right 0
     .container
       height 100%
+    &.background-transparent
+      background-color transparent
     &.active
       &:before
         display block
