update video and add become form elements

--- a/dev/pug/section/become/form.pug
+++ b/dev/pug/section/become/form.pug
@@ -26,8 +26,14 @@ section.become-form#become-form
             label.form-group__label.form-group__label--select(for="shoesize") Размер обуви
             include ../../modules/form-select
           .form-group
-            label.form-group__label(for="girth") Обхват бедер
-            input.form-group__input(type="text" placeholder="Обхват бедер" id="girth" data-name="num")
+            label.form-group__label(for="param-1") Обхват груди
+            input.form-group__input(type="text" placeholder="Обхват груди" id="param-1" data-name="num")
+          .form-group
+            label.form-group__label(for="param-2") Обхват талии
+            input.form-group__input(type="text" placeholder="Обхват талии" id="param-2" data-name="num")
+          .form-group
+            label.form-group__label(for="param-3") Обхват бедер
+            input.form-group__input(type="text" placeholder="Обхват бедер" id="param-3" data-name="num")
         .form__block
           h5.form__subtitle.become-form__subtitle--agreement Согласие на фотосессию*
           span.become-form__required.become-form__required--comment *за съемку в категориях устанавливается доплата в размерах 20% и 30% от стоимости за час
