--- a/dev/pug/section/index/hero.pug
+++ b/dev/pug/section/index/hero.pug
@@ -1,7 +1,7 @@
 section.index-hero
   .index-hero__video
-    video.desktop(src="app/img/content/videoplayback.mp4" muted autoplay loop)
-    video.mobile(src="app/img/content/videoplayback-mobile.mp4" muted autoplay loop)
+    video.desktop(src="app/img/content/videoplayback.mp4" muted autoplay="autoplay" loop preload="auto")
+    video.mobile(src="app/img/content/videoplayback-mobile.mp4" muted autoplay="autoplay" loop preload="auto" playsinline)
   .container
     .index-hero__wrap
       h1.page-title.page-title--white.index-hero__title Студия KazanExpress — выходи на новый уровень
