--- a/dev/static/stylus/section/catalog/block.styl
+++ b/dev/static/stylus/section/catalog/block.styl
@@ -1,22 +1,28 @@
 .catalog-list-block
   cursor pointer
+  height 100%
+  display flex
+  flex-direction column
 
 .catalog-list-block__image
   border-radius 10px
   overflow hidden
-  margin-bottom 10px
+  margin-bottom auto
+  max-height 360px
   img
     width 100%
+  @media(max-width breakpoint-lg)
+    max-height 290px
+  @media (max-width breakpoint-md)
+    max-height none
 
 .catalog-list-block__row
   display flex
   align-items center
   justify-content space-between
-  &+&
-    margin-top 10px
+  margin-top 10px
   @media (max-width breakpoint-md)
-    &+&
-      margin-top 5px
+    margin-top 5px
 
 .catalog-list-block__name,
 .catalog-list-block__age
