fixed filters width

--- a/dev/pug/modules/multiselect-field.pug
+++ b/dev/pug/modules/multiselect-field.pug
@@ -4,7 +4,7 @@
   button.select-field__reset.range-field__reset(type="button") сброс
   span.select-field__active Размер одежды
   .select-field__list
-    label.select-field__item.checkbox-label XXS
+    label.select-field__item.checkbox-label Товары для беременных
       input(type="checkbox")
     label.select-field__item.checkbox-label XS
       input(type="checkbox")
