--- a/dev/pug/section/catalog/filters.pug
+++ b/dev/pug/section/catalog/filters.pug
@@ -16,7 +16,7 @@ section.catalog-filters
           .catalog-filters__item
             include ../../modules/multiselect-field
           .catalog-filters__item
-            include ../../modules/select-field
+            include ../../modules/multiselect-field
           .catalog-filters__item
             include ../../modules/select-field
           .catalog-filters__item
