--- a/dev/pug/section/become/form.pug
+++ b/dev/pug/section/become/form.pug
@@ -63,7 +63,7 @@ section.become-form#become-form
             input.form-group__input(data-phone type="text" placeholder="+7 (___) ___ __ __" id="phone" data-name="phone")
           .form-group
             label.form-group__label(for="instagram") Аккаунт Instagram 
-            input.form-group__input(type="text" placeholder="@instagram" id="instagram" data-name="text")
+            input.form-group__input(data-instagram type="text" placeholder="@instagram" id="instagram" data-name="text")
         button.btn.btn--dark.become-form__btn(type="submit")
           span Отправить анкету
         .become-form__agreement.form-group
