--- a/dev/static/stylus/common/form-group.styl
+++ b/dev/static/stylus/common/form-group.styl
@@ -20,6 +20,8 @@
     max-width 350px
   &--select
     cursor default
+  @media (max-width breakpoint-md)
+    font-size 14px
 
 .form-group__input
   background-color #fff
