--- a/dev/static/stylus/section/index/portfolio.styl
+++ b/dev/static/stylus/section/index/portfolio.styl
@@ -24,6 +24,8 @@
     max-width 166px
     &+&
       margin-left 15px
+  @media (max-width breakpoint-sm)
+    max-width 155px
 
 .index-portfolio__slide-wrap
   display flex
