--- a/dev/static/stylus/common/page-title.styl
+++ b/dev/static/stylus/common/page-title.styl
@@ -8,6 +8,7 @@
     color #fff
   @media (max-width breakpoint-md)
     font-size 36px
+    font-weight bold
 
 .title-h3
   font-weight bold
@@ -19,3 +20,4 @@
     color #fff
   @media (max-width breakpoint-md)
     font-size 24px
+    font-weight 500
