--- a/dev/static/stylus/section/index/about.styl
+++ b/dev/static/stylus/section/index/about.styl
@@ -79,6 +79,10 @@
     margin-left 40px
   &.mobile
     display none
+  &.small
+    max-width 260px
+  &.big
+    max-width 300px
   @media (max-width breakpoint-md)
     &.small
       max-width 50%
