--- a/dev/static/stylus/section/index/portfolio.styl
+++ b/dev/static/stylus/section/index/portfolio.styl
@@ -42,6 +42,7 @@
 .index-portfolio__slide-image
   border-radius 10px
   overflow hidden
+  max-width 385px
   @media (max-width breakpoint-md)
     img
       width 100%
