fixed card info mobile

--- a/dev/pug/section/card/info.pug
+++ b/dev/pug/section/card/info.pug
@@ -1,7 +1,7 @@
 .card-info
   button.card-info__close.modal-close(type="button" aria-label="Закрыть карточку" data-remodal-action="close")
     +icon('close-modal')
-  h1.card-info__name Алия Гарифуллина
+  h1.card-info__name Яков Зорянкин
   .card-info__wrap
     .card-info__header
       .card-info__price.card-info__price--red
