--- a/dev/static/stylus/section/card/info.styl
+++ b/dev/static/stylus/section/card/info.styl
@@ -39,7 +39,7 @@
   @media (max-width breakpoint-xl)
     font-size 36px
   @media (max-width breakpoint-lg)
-    max-width 80%
+    max-width 70%
 
 .card-info__header
   display flex
@@ -87,6 +87,7 @@
   align-items flex-end
   margin-left auto
   @media (max-width breakpoint-md)
+    align-items baseline
     position absolute
     right 22px
     top 30px
