--- a/dev/pug/modules/range-field.pug
+++ b/dev/pug/modules/range-field.pug
@@ -8,12 +8,12 @@
       .range-field__info-block
         span.range-field__name Выбранный возрастной диапазон
         p.range-field__select
-          span.range-field__select-start 18
-          | -
-          span.range-field__select-end 23
+          span.range-field__select-start 18 ₽ 
+          | - 
+          span.range-field__select-end 23 ₽
       button.range-field__reset(type="button") сброс
     .range-field__slider
       .range-field__slider-info
         span.range-field__slider-min 3
         span.range-field__slider-max 45
-      .range-field__slider-slider(data-min="3" data-max="45" data-start="18" data-end="23" data-step="5" data-suffix="")
+      .range-field__slider-slider(data-min="3" data-max="45" data-start="18" data-end="23" data-step="5" data-suffix="₽")
