--- a/dev/pug/section/catalog/list.pug
+++ b/dev/pug/section/catalog/list.pug
@@ -4,22 +4,16 @@ section.catalog-list
     .catalog-list__blocks
       .catalog-list__block
         include ./block
-        // Этот блок надо вставлять в каждый .catalog-list__block со своим data-remodal-id
         include ../card/modal
       .catalog-list__block
-        include ./block
+        include ./block2
+        include ../card/modal2
       .catalog-list__block
-        include ./block
+        include ./block3
+        include ../card/modal3
       .catalog-list__block
-        include ./block
-      .catalog-list__block
-        include ./block
-      .catalog-list__block
-        include ./block
-      .catalog-list__block
-        include ./block
-      .catalog-list__block
-        include ./block
+        include ./block4
+        include ../card/modal4
     span.catalog-list__views Показаны 20 из 575 моделей
     button.catalog-list__btn.btn 
       span Показать еще
