--- a/dev/static/stylus/common/range-field.styl
+++ b/dev/static/stylus/common/range-field.styl
@@ -39,6 +39,9 @@
   @media (max-width breakpoint-md)
     margin-bottom 0
 
+.range-field__select
+  font-family -apple-system, 'Roboto', Arial, sans-serif
+
 .range-field__reset
   letter-spacing 1px
   color gray-3
