--- a/dev/static/stylus/section/index/about.styl
+++ b/dev/static/stylus/section/index/about.styl
@@ -1,7 +1,9 @@
 .index-about
-  padding-top 200px
+  margin-top 100px
+  padding-top 100px
   @media (max-width breakpoint-md)
-    padding-top 100px
+    margin-top 50px
+    padding-top 50px
     padding-bottom 80px
 
 .index-about__text
@@ -67,6 +69,7 @@
 .index-about__block-images
   margin-right 50px
   display flex
+  align-items flex-start
   @media (max-width breakpoint-md)
     display block
     margin-right 0
