--- a/dev/static/stylus/section/index/services.styl
+++ b/dev/static/stylus/section/index/services.styl
@@ -1,8 +1,10 @@
 .index-services
-  padding-top 200px
+  margin-top 100px
+  padding-top 100px
   padding-bottom 185px
   @media (max-width breakpoint-md)
-    padding-top 90px
+    margin-top 40px
+    padding-top 50px
     padding-bottom 100px
     overflow hidden
 
