--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -138,6 +138,7 @@
   max-width 390px
   border-radius 10px
   overflow hidden
+  z-index 0
   .slick-dots
     display flex
     justify-content center
