--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -80,6 +80,14 @@
     line-height 120%
     text-transform uppercase
     color gray-2
+  &.hide
+    display none
+  &.photo
+    svg
+      width 20px
+      height 18px
+      stroke transparent
+      fill gray-2
   @media (max-width breakpoint-md)
     background-color gray-5
     flex-direction row
