--- a/dev/static/stylus/section/index/advantages.styl
+++ b/dev/static/stylus/section/index/advantages.styl
@@ -74,6 +74,8 @@
     &:last-child
       max-width 285px
       margin-left auto
+    &:first-child
+      margin-right -15px
     &:nth-child(2)
       img,
       p
