--- a/dev/pug/section/index/about.pug
+++ b/dev/pug/section/index/about.pug
@@ -19,11 +19,10 @@ section.index-about#about
           img(src="app/img/content/index-block-2.jpg" alt="Пример продукта 3")
         .index-about__block-image.small
           img(src="app/img/content/index-block-1.jpg" alt="Пример продукта 4")
-        .index-about__block-image.small.mobile
-          img(src="app/img/content/index-block-1.jpg" alt="Пример продукта 5")
-        .index-about__block-image.big.mobile
-          img(src="app/img/content/index-block-2.jpg" alt="Пример продукта 6")
-      p.index-about__text.index-about__block-text Каждую неделю мы пополняем базу моделей, которые смогут грамотно и выгодно представить ваш продукт на маркетплейсе, выделяя его среди конкурентов
+        a.btn.btn--dark(href="catalog.html") каталог моделей
+      .index-about__block-info
+        p.index-about__text.index-about__block-text Каждую неделю мы пополняем базу моделей, которые смогут грамотно и выгодно представить ваш продукт на маркетплейсе, выделяя его среди конкурентов
+        a.btn.btn--dark(href="catalog.html") каталог моделей
     p.index-about__footer-text.index-about__text Сохраняя потрясающий уровень качества, наши цены в 5-10 раз ниже любой профессиональной студии. В этом заключается наш подход к партнерам, который не имеет аналогов среди российских маркетплейсов.
   .index-about__footer-image
     img(src="app/img/content/index-about-footer.jpg" alt="Картинка о компании")
