--- a/dev/static/stylus/section/index/advantages.styl
+++ b/dev/static/stylus/section/index/advantages.styl
@@ -81,10 +81,20 @@
       p
         margin-left auto
         margin-right auto
+      img
+        width 100%
+      p
+        margin-right 20px
     &:nth-child(3)
       p
         margin-left auto
-        margin-right auto
+        margin-right 20px
+    &:nth-child(4)
+      p
+        max-width 220px
+        margin-right 50px
+      img
+        width 100% 
     p
       margin-bottom 25px
       max-width 250px
