add medium zoom

--- a/dev/pug/section/index/about.pug
+++ b/dev/pug/section/index/about.pug
@@ -5,20 +5,20 @@ section.index-about#about
       .index-about__info-block
         p.index-about__text.index-about__info-text Команда студии постояно растет и включает в себя самых талантливых и перспективных специалистов из разных областей
         .index-about__info-image
-          img(src="app/img/content/index-info.jpg" alt="Картинка о компании")
+          img(src="app/img/content/index-info.jpg" alt="Картинка о компании" data-zoomable)
     .index-about__block.wow.fadeIn
       .index-about__block-images
         .index-about__block-image.small
-          img(src="app/img/content/index-block-1.jpg" alt="Пример продукта 1")
+          img(src="app/img/content/index-block-1.jpg" alt="Пример продукта 1" data-zoomable)
         .index-about__block-image.big
-          img(src="app/img/content/index-block-2.jpg" alt="Пример продукта 2")
+          img(src="app/img/content/index-block-2.jpg" alt="Пример продукта 2" data-zoomable)
       p.index-about__text.index-about__block-text Мы предоставляем качественные и креативные снимки, вызывая у клиента желание оформить заказ
     .index-about__block.wow.fadeIn
       .index-about__block-images
         .index-about__block-image.big
-          img(src="app/img/content/index-block-2.jpg" alt="Пример продукта 3")
+          img(src="app/img/content/index-block-2.jpg" alt="Пример продукта 3" data-zoomable)
         .index-about__block-image.small
-          img(src="app/img/content/index-block-1.jpg" alt="Пример продукта 4")
+          img(src="app/img/content/index-block-1.jpg" alt="Пример продукта 4" data-zoomable)
         a.btn.btn--dark(href="catalog.html") каталог моделей
       .index-about__block-info
         p.index-about__text.index-about__block-text Каждую неделю мы пополняем базу моделей, которые смогут грамотно и выгодно представить ваш продукт на маркетплейсе, выделяя его среди конкурентов
