--- a/dev/pug/section/index/advantages.pug
+++ b/dev/pug/section/index/advantages.pug
@@ -6,29 +6,29 @@ section.index-advantages
         ul.index-advantages__info
           li.index-advantages__info-item 
             p Семь рабочих зон для проведения съемок любой сложности
-            img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 5")
+            img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 5" data-zoomable)
           li.index-advantages__info-item 
             p Широкий ассортимент аксессуаров и нарядов
-            img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 6")
+            img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 6" data-zoomable)
           li.index-advantages__info-item 
             p Одно из лучших профессиональных оборудований в стране
-            img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 7")
+            img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 7" data-zoomable)
           li.index-advantages__info-item 
             p Технология съемки товара 360 градусов 
-            img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 8")
+            img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 8" data-zoomable)
         .index-advantages__images
           .index-advantages__images-row
             .index-advantages__image.big
-              img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 1")
+              img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 1" data-zoomable)
             .index-advantages__image.small
-            img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 2")
+            img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 2" data-zoomable)
           .index-advantages__images-row.index-advantages__images-row--center
             .index-advantages__image.big
-              img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 3")
+              img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 3" data-zoomable)
           .index-advantages__images-row
             .index-advantages__image.small
-              img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 4")
+              img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 4" data-zoomable)
     .index-advantages__block.wow.fadeIn
       .index-advantages__block-image
-        img(src="app/img/content/index-advantages-block.jpg" alt="Картинка о преимуществах")
+        img(src="app/img/content/index-advantages-block.jpg" alt="Картинка о преимуществах" data-zoomable)
       p.index-advantages__block-text Сохраняя потрясающий уровень качества, наши цены в 5-10 раз ниже любой профессиональной студии. В этом заключается наш подход к партнерам, который не имеет аналогов среди российских маркетплейсов.
