--- a/dev/pug/section/index/services.pug
+++ b/dev/pug/section/index/services.pug
@@ -13,7 +13,7 @@ section.index-services#services
           a.btn.btn--dark(href="#") заказать
         .index-services__block-views
           .index-services__block-image
-            img(src="app/img/content/index-services-1.jpg" alt="Картинка услуги 1")
+            img(src="app/img/content/index-services-1.jpg" alt="Картинка услуги 1" data-zoomable)
           p.index-services__block-subimage До 01.08.2020 года в стоимость входят все услуги студии: работа модели, стилиста, визажиста, продюсера, реквизит, видеоролик (при необходимости).
     .index-services__block.wow.fadeIn
       h3.title-h3.index-services__block-title Доставка товара
@@ -25,7 +25,7 @@ section.index-services#services
           a.btn.btn--dark(href="#") Заказать доставку
         .index-services__block-views
           .index-services__block-image
-            img(src="app/img/content/index-services-2.jpg" alt="Картинка услуги 2")
+            img(src="app/img/content/index-services-2.jpg" alt="Картинка услуги 2" data-zoomable)
     .index-services__block.wow.fadeIn
       h3.title-h3.index-services__block-title Экспресс-редактирование
       p.index-services__block-subtitle Мы добавим ваш логотип и отредактируем сторонние фотографии, чтобы ваш магазин соответствовал лучшим современным стандартам дизайна.
@@ -36,7 +36,7 @@ section.index-services#services
           a.btn.btn--dark(href="#") Заказать обработку
         .index-services__block-views
           .index-services__block-image
-            img(src="app/img/content/index-services-3.jpg" alt="Картинка услуги 3")
+            img(src="app/img/content/index-services-3.jpg" alt="Картинка услуги 3" data-zoomable)
     .index-services__more.wow.fadeIn
       p.index-services__more-text Более подробно о процессе подачи заявки на предметную съёмку и доставку:
       a.index-services__more-link(href="#") Инструкция для продавцов KazanExpress
