--- a/dev/pug/section/index/about.pug
+++ b/dev/pug/section/index/about.pug
@@ -5,7 +5,7 @@ section.index-about#about
       .index-about__info-block
         p.index-about__text.index-about__info-text Команда студии постояно растет и включает в себя самых талантливых и перспективных специалистов из разных областей
         .index-about__info-image
-          img(src="app/img/content/index-info.jpg" alt="Картинка о компании" data-zoomable)
+          img(src="https://studio.kazanexpress.ru/wp-content/uploads/2020/07/1-1-min-scaled.jpg" alt="Картинка о компании" data-zoomable)
     .index-about__block.wow.fadeIn
       .index-about__block-images
         .index-about__block-image.small
