add brad for image

--- a/dev/static/stylus/section/index/advantages.styl
+++ b/dev/static/stylus/section/index/advantages.styl
@@ -101,6 +101,10 @@
     img
       display block
 
+.index-advantages__info-image
+  border-radius 10px
+  overflow hidden
+
 .index-advantages__images
   @media (max-width breakpoint-md)
     display none
