--- a/dev/pug/section/index/advantages.pug
+++ b/dev/pug/section/index/advantages.pug
@@ -6,16 +6,20 @@ section.index-advantages
         ul.index-advantages__info
           li.index-advantages__info-item 
             p Семь рабочих зон для проведения съемок любой сложности
-            img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 5" data-zoomable)
+            .index-advantages__info-image
+              img(src="app/img/content/index-advantages-1.jpg" alt="Картинка преимущество 5" data-zoomable)
           li.index-advantages__info-item 
             p Широкий ассортимент аксессуаров и нарядов
-            img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 6" data-zoomable)
+            .index-advantages__info-image
+              img(src="app/img/content/index-advantages-2.jpg" alt="Картинка преимущество 6" data-zoomable)
           li.index-advantages__info-item 
             p Одно из лучших профессиональных оборудований в стране
-            img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 7" data-zoomable)
+            .index-advantages__info-image
+              img(src="app/img/content/index-advantages-3.jpg" alt="Картинка преимущество 7" data-zoomable)
           li.index-advantages__info-item 
             p Технология съемки товара 360 градусов 
-            img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 8" data-zoomable)
+            .index-advantages__info-image
+              img(src="app/img/content/index-advantages-4.jpg" alt="Картинка преимущество 8" data-zoomable)
         .index-advantages__images
           .index-advantages__images-row
             .index-advantages__image.big
