--- a/dev/pug/modules/menu.pug
+++ b/dev/pug/modules/menu.pug
@@ -3,5 +3,7 @@ nav.menu
   a.menu__link.js-scroll-to(href="#services") Услуги
   a.menu__link.active(href="catalog.html") Модели
   a.menu__link(href="become.html") Стать моделью
-  a.menu__link(href="payment.html") Оплата
+  .menu__link-group
+    a.menu__link(href="payment.html") Оплата
+    span.menu__link-count 1
   button.menu__link(type="button" data-remodal-target="contact-modal") Контакты
