--- a/dev/pug/section/card/info.pug
+++ b/dev/pug/section/card/info.pug
@@ -55,5 +55,7 @@
             span.card-info__legend Обхват бедер
             span.card-info__readiness-value 92
   .card-info__actions
-    a.btn.card-info__btn(href="#") Заказать фотосессию
+    button.btn.card-info__btn(type="button") Заказать фотосессию
+    p.card-info__actions-text.hide Модель добавлена на страницу 
+      a(href="payment.html") оплаты
     button.card-info__next.card-info__legend(type="button" data-remodal-target="next_name_slug") Перейти к следующей модели
