--- a/dev/pug/section/header.pug
+++ b/dev/pug/section/header.pug
@@ -3,6 +3,7 @@ header.header
     .header__wrap
       button.header__burger(type="button" aria-label="Открыть меню")
         span
+      .header__count.hide 6
       a.header__logo(href="/")
         svg(width="170" height="45" viewbox="0 0 170 45" fill="none" xmlns="http://www.w3.org/2000/svg")
           path(d="M21.8186 44.0422C33.716 44.0422 43.3608 34.3974 43.3608 22.5C43.3608 10.6025 33.716 0.957764 21.8186 0.957764C9.92114 0.957764 0.276367 10.6025 0.276367 22.5C0.276367 34.3974 9.92114 44.0422 21.8186 44.0422Z")
