--- a/dev/pug/section/index/portfolio.pug
+++ b/dev/pug/section/index/portfolio.pug
@@ -5,20 +5,20 @@ section.index-portfolio.wow.fadeIn
       .index-portfolio__slide
         .index-portfolio__slide-wrap.bottom
           .index-portfolio__slide-image
-            img(src="app/img/content/index-portfolio-1.jpg" alt="Картинка Портфолио 1" data-zoomable)
+            img(src="app/img/content/index-portfolio-1.jpg" alt="Картинка Портфолио 1")
       .index-portfolio__slide
         .index-portfolio__slide-wrap.top
           .index-portfolio__slide-image
-            img(src="app/img/content/index-portfolio-2.jpg" alt="Картинка Портфолио 2" data-zoomable)
+            img(src="app/img/content/index-portfolio-2.jpg" alt="Картинка Портфолио 2")
       .index-portfolio__slide
         .index-portfolio__slide-wrap.top
           .index-portfolio__slide-image
-            img(src="app/img/content/index-portfolio-3.jpg" alt="Картинка Портфолио 3" data-zoomable)
+            img(src="app/img/content/index-portfolio-3.jpg" alt="Картинка Портфолио 3")
       .index-portfolio__slide
         .index-portfolio__slide-wrap.center
           .index-portfolio__slide-image
-            img(src="app/img/content/index-portfolio-4.jpg" alt="Картинка Портфолио 4" data-zoomable)
+            img(src="app/img/content/index-portfolio-4.jpg" alt="Картинка Портфолио 4")
       .index-portfolio__slide
         .index-portfolio__slide-wrap.center
           .index-portfolio__slide-image
-            img(src="app/img/content/index-portfolio-3.jpg" alt="Картинка Портфолио 5" data-zoomable)
+            img(src="app/img/content/index-portfolio-3.jpg" alt="Картинка Портфолио 5")
