--- a/dev/static/stylus/section/payment/index.styl
+++ b/dev/static/stylus/section/payment/index.styl
@@ -2,7 +2,7 @@
   padding-top 200px
   padding-bottom 100px
   @media (max-width breakpoint-md)
-    padding-top 100px
+    padding-top 40px
     padding-bottom 35px
 
 .payment-page__text
@@ -45,3 +45,4 @@
 
 @import './human.styl'
 @import './organization.styl'
+@import './calculator.styl'
