--- a/dev/static/stylus/common/menu.styl
+++ b/dev/static/stylus/common/menu.styl
@@ -8,6 +8,13 @@
     display block
     margin 0
 
+.menu__link-group
+  position relative
+  @media(max-width breakpoint-lg)
+    margin-right 10px
+  @media (max-width breakpoint-md)
+    margin-right 0
+
 .menu__link
   font-size 18px
   line-height 21px
@@ -39,3 +46,21 @@
       border-top 1px solid #4F4F4F
     &.logo
       display none
+
+.menu__link-count
+  position absolute
+  top 2px
+  left calc(100% - 12px)
+  width 17px
+  height 17px
+  text-align center
+  font-size 9px
+  line-height 17px
+  color #FFFFFF
+  background-color color-red
+  border-radius 50%
+  @media(max-width breakpoint-lg)
+    left calc(100% - 6px)
+  @media (max-width breakpoint-md)
+    left 70px
+    top 19px
