--- a/dev/static/stylus/section/header.styl
+++ b/dev/static/stylus/section/header.styl
@@ -88,6 +88,16 @@
   @media (max-width breakpoint-md)
     display flex
 
+.header__count
+  @extends .menu__link-count
+  display none !important
+  left 43px !important
+  top 16px !important
+  &.hide
+    display none !important
+  @media (max-width breakpoint-md)
+    display block !important
+
 .header__logo
   position absolute
   top 50px
