fixed for slider

--- a/dev/pug/section/card/views.pug
+++ b/dev/pug/section/card/views.pug
@@ -11,6 +11,10 @@
         img(src="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 4")
       .card-views__thumbs-slide
         img(src="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 5")
+      .card-views__thumbs-slide
+        img(src="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 6")
+      .card-views__thumbs-slide
+        img(src="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 7")
     button.card-views__thumbs-video.video(type="button" aria-label="Включить видео ИМЯ")
       +icon('play')
       span Видео
@@ -34,5 +38,9 @@
         img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 4")
       .card-views__display-slide
         img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 5")
+      .card-views__display-slide
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 6")
+      .card-views__display-slide
+        img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 7")
     .card-views__display-video
       video(src="app/img/content/videoplayback.mp4" controls)
