--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -26,6 +26,7 @@
 
 .card-views__thumbs-slider
   height 380px
+  overflow hidden
   @media (max-width breakpoint-md)
     position absolute
     bottom calc(100% + 30px)
