--- a/dev/static/stylus/section/payment/calculator.styl
+++ b/dev/static/stylus/section/payment/calculator.styl
@@ -7,6 +7,12 @@
     color gray-1
   @media (max-width breakpoint-md)
     margin-bottom 45px
+  @media (max-width breakpoint-md)
+    h4
+      font-size 20px
+    h4.payment-calculator__total
+      font-size 16px
+      font-weight normal
 
 .payment-calculator__title
   max-width 814px
