--- a/dev/static/stylus/section/index/hero.styl
+++ b/dev/static/stylus/section/index/hero.styl
@@ -41,6 +41,7 @@
     padding-top 0
     height 100vh
     min-height 500px
+    max-height 654px
     video
       object-fit cover
       &.desktop
