--- a/dev/static/stylus/section/payment/calculator.styl
+++ b/dev/static/stylus/section/payment/calculator.styl
@@ -179,10 +179,12 @@
 .payment-calculator__item-price
   align-self center
   letter-spacing 0.8px
+  min-width 67px
   @media (max-width breakpoint-md)
     position absolute
     bottom 5px
     right 20px
+    min-width auto
 
 .payment-calculator__item-close
   cursor pointer
